--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 .page-container {
     display: flex;
     flex-direction: column;
-    min-height: calc(100vh - 16px);
+    min-height: 100vh;
 }
 
 .content {
