--- a/src/app/poll/poll.component.scss
+++ b/src/app/poll/poll.component.scss
@@ -22,7 +22,9 @@
 
 .allow-random-draw {
     margin: 5px;
+    margin-bottom: 15px;
     display: flex;
+    align-items: center;
     justify-content: flex-end;
 
     label {
