--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,6 +1,7 @@
 <mat-card class="container">
   <p>
-    Easily create polls and share them with you friends!<br/><br/>
+    🍹🍿🎬🌴📺👾🎉<br/>
+    Easily create polls of movies, TV series or just about anything and share them with you friends.<br/>Make choosing easy with random draw!<br/><br/>
     Yay! 👏
   </p>
   <button mat-raised-button  color="primary" (click)="createPoll()" aria-label="Create poll">Create poll</button>
