Add remove option to all poll items. Fix issue with regular poll item width.

--- a/src/app/add-poll/add-poll.component.scss
+++ b/src/app/add-poll/add-poll.component.scss
@@ -1,6 +1,7 @@
 
 .option-card {
     position: relative;
+    margin-bottom: 10px;
     .close {
         position: absolute;
         right: 15px;
