--- a/src/app/add-poll/add-poll.component.html
+++ b/src/app/add-poll/add-poll.component.html
@@ -12,7 +12,7 @@
   </div>
   <mat-form-field class="full-width" style="margin-top: 17px;">
     <input matInput placeholder="Name of the poll" [(ngModel)]="poll.name">
-    <mat-hint align="start" *ngIf="!saveActive()">Add name and at least one option to save the poll</mat-hint>
+    <!-- <mat-hint align="start" style="margin-bottom: 5px;">Add name and at least one valid option to save the poll</mat-hint> -->
   </mat-form-field>
   <!-- Movie search -->
   <mat-form-field class="full-width" *ngIf="poll.moviepoll" style="margin-bottom: 15px;">
