Add fade-in-out animation to revealing random poll option, improve adding of new items to existing polls.

--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -1,7 +1,7 @@
 .container {
     font-family: 'Product Sans';
     padding: 30pt;
-    font-size: 30px;
+    font-size: 1.6em;
     text-align: center;
 
     button {
