--- a/src/app/poll-option-dialog/poll-option-dialog.component.scss
+++ b/src/app/poll-option-dialog/poll-option-dialog.component.scss
@@ -1,3 +1,7 @@
+:host {
+    min-width: 280px;
+}
+
 .content {
     margin-left: -22px;
     margin-right: -22px;
@@ -18,4 +22,26 @@
 .mat-dialog-actions {
     display: flex;
     justify-content: center;
+}
+
+.dice-roll {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+
+    .mat-icon.animation-roll {
+        font-size: 5em;
+        width: 80px;
+        height: 80px;
+    }
+}
+
+@keyframes rotate {
+    from {transform:rotate(0deg);}
+    to {transform:rotate(360deg);}
+}
+  
+.animation-roll {
+    animation: rotate 1s infinite 0.3s ease-in-out;
 }
