--- a/src/app/movie-poll-item/movie-poll-item.component.html
+++ b/src/app/movie-poll-item/movie-poll-item.component.html
@@ -1,4 +1,5 @@
 <ng-container *ngIf="movie$ | async as movie">
+  <div class="bg" [style.width.%]="progressBarWidth"></div>
   <mat-card class="option-card">
 
     <img class="poster" *ngIf="movie.posterUrl" img-cache [img-cache-src]="movie.posterUrl">
@@ -16,7 +17,7 @@
           </div>
           <div class="movie-ratings">
             <span class="movie-rating tmdb" matTooltip="TMDb score">{{ movie.tmdbRating }}</span>
-            <span *ngIf="movie.imdbRating" class="movie-rating imdb" matTooltip="IMDb score">{{ movie.imdbRating }}</span>
+            <span *ngIf="movie.imdbRating" (click)="window.open('https://www.imdb.com/title/' + movie.imdbId)" class="movie-rating imdb" matTooltip="IMDb score">{{ movie.imdbRating }}</span>
             <span *ngIf="movie.metaRating" class="movie-rating meta-critic" [ngClass]="getMetaBgColor(movie.metaRating)" matTooltip="Metacritic score">{{ movie.metaRating }}</span>
             <span *ngIf="movie.rottenRating" class="movie-rating rotten-tomatoes" matTooltip="RottenTomatoes score">{{ movie.rottenRating }}</span>
           </div>
