--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -7,20 +7,20 @@
 @include mat-core();
 
 $custom-primary-palette: (
-    50 : #e7fef7,
-    100 : #c4fbeb,
-    200 : #9cf9dd,
-    300 : #74f7cf,
-    400 : #57f5c5,
-    500 : #79f4bc,
-    600 : #33f1b5,
-    700 : #2cefac,
-    800 : #24eda4,
-    900 : #17ea96,
+    50 : #ffeef3,
+    100 : #ffd4e1,
+    200 : #ffb8cd,
+    300 : #ff9cb8,
+    400 : #ff86a9,
+    500 : #ff719a,
+    600 : #ff6992,
+    700 : #ff5e88,
+    800 : #ff547e,
+    900 : #ff426c,
     A100 : #ffffff,
-    A200 : #e8fff5,
-    A400 : #b5ffdf,
-    A700 : #9cffd4,
+    A200 : #ffffff,
+    A400 : #ffeaee,
+    A700 : #ffd0da,
     contrast: (
         50 : #000000,
         100 : #000000,
