--- a/src/app/series-poll-item/series-poll-item.component.scss
+++ b/src/app/series-poll-item/series-poll-item.component.scss
@@ -48,6 +48,8 @@
         .basics {
             padding-right: 10px;
             line-height: 0.7em;
+            display: flex;
+            align-items: center;
         }
     }
 
