--- a/src/app/voter/voter.component.scss
+++ b/src/app/voter/voter.component.scss
@@ -15,7 +15,7 @@ $width: 40px;
     background-color: #fff;
 
     .voted {
-        background-color: #abf8c8;
+        background-color: FFA99F;
     }
 
     .votes {
