--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -14,7 +14,7 @@ $custom-primary-palette: (
     400 : #ff86a9,
     500 : #ff719a,
     600 : #ff6992,
-    700 : #ff5e88,
+    700 : #ffa99f,
     800 : #ff547e,
     900 : #ff426c,
     A100 : #ffffff,
