--- a/src/styles.scss
+++ b/src/styles.scss
@@ -157,3 +157,9 @@ $max-width: 556px;
       transform: translate(50%,0);
     }
 }
+
+.md-16 {
+  width: 14px !important;
+  height: 14px !important;
+  font-size: 13px !important;
+}
