--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -76,11 +76,18 @@
         .basics {
             padding-right: 10px;
             line-height: 0.7em;
+            display: flex;
+            align-items: center;
         }
     }
 
     .year, .runtime {
         font-size: 0.6em;
+    }
+
+    .separator {
+        font-size: 0.6em;
+        padding: 0 4px;
     }
 
     .overview {
@@ -94,13 +101,17 @@
 
     .movie-ratings {
         margin-bottom: 3px;
+        display: flex;
+        flex-wrap: wrap;
     
         .movie-rating {
+            display: flex;
             font-size: 0.6em;
             font-family: "Product Sans Bold";
             border-radius: 2px;
             background-color: #6cd577;
             padding: 1px 8px;
+            margin: 2px;
 
             &.imdb {
                 background-color: #f5c532;
@@ -125,6 +136,14 @@
             &.rotten-tomatoes {
                 background-color: #ea3f33;
                 color: white;
+            }
+
+            .score {
+                padding-right: 10px;
+            }
+
+            mat-icon {
+                padding-left: 5px;
             }
             
         }
@@ -169,7 +188,7 @@
         left: 0;
         height: 3px;
         width: 0%;
-        background-color: #2cefac;
+        background-color: FFA99F;
         transition: all 2s ease !important;
         z-index: 1;
     }
