Fixes broken color codes and changes old colors to new theme colors.

--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -184,7 +184,7 @@
         left: 0;
         height: 3px;
         width: 0%;
-        background-color: FFA99F;
+        background-color: #FFA99F;
         transition: all 2s ease !important;
         z-index: 1;
     }
