--- a/src/app/poll/poll.component.scss
+++ b/src/app/poll/poll.component.scss
@@ -75,7 +75,7 @@
         left: 0;
         height: 100%;
         width: 0%;
-        background-color: FFA99F;
+        background-color: #FFA99F;
         opacity: 0.3;
         transition: all 2s ease !important;
         z-index: 1;
