--- a/src/app/voter/voter.component.html
+++ b/src/app/voter/voter.component.html
@@ -3,7 +3,7 @@
     <span>{{ pollItem.voters.length }}</span>
   </div>
   <div class="button-container">
-    <button mat-raised-button color="primary" (click)="clicked()">
+    <button mat-raised-button color="primary" (click)="clicked()" class="favorite">
       <mat-icon>favorite</mat-icon>
     </button>
   </div>
