--- a/src/app/voter/voter.component.scss
+++ b/src/app/voter/voter.component.scss
@@ -49,5 +49,10 @@ $width: 40px;
                 width: 18px;
             }
         }
+
+        .favorite {
+            border-top-left-radius: 0;
+            border-top-right-radius: 0;
+        }
     }
 }
