Work on the full sreen mode on desktop and update on service worker. Udpates should now register more easily.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,7 +49,15 @@ body {
   overscroll-behavior-y: none;
 }
 
-html, body { min-height: 100vh; }
+html, body {
+  // min-height: 100vh;
+  padding: 0;
+  margin: 0;
+}
+
+header {
+  padding-top: 8px;
+}
 
 h1, h2, h3, h4, label {
     font-family: 'Product Sans Bold';
